<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="com.avinash.activities.secondquestion.SecondQuestionViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tv_title"
                android:textSize="20sp"
                android:text="@string/what_are_the_colors_in_the_indian_national_flag_select_all"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/ll_questions"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_one"
                    android:padding="10dp"
                    android:text="@string/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_two"
                    android:padding="10dp"
                    android:text="@string/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_three"
                    android:padding="10dp"
                    android:text="@string/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_four"
                    android:padding="10dp"
                    android:text="@string/green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
                android:id="@+id/btn_next"
                android:text="@string/next"
                android:layout_margin="20dp"
                android:onClick="@{viewmodel.onNextClicked}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>